@@ -1,3 +1,5 @@
+* Unreconcile lines when cancelling statement
+
 Version 4.4.0 - 2017-05-01
 * Bug fixes (see mercurial logs for details)
 * Add statement line number as move description
